--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.3",
+    "css-loader": "^1.0.1",
     "nodemon": "^1.18.6",
     "npm-run-all": "^4.1.3",
+    "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-node-externals": "^1.7.2"
